# FlipPay

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-entrypoint.sh
backend/: .env.sample  .pdm-python  Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/bridges/: .env.sample  README.md  package-lock.json  package.json  tsconfig.json
backend/bridges/abis/: starkgateAbi.json
backend/bridges/scripts/: bridgeEthToPolkadot.ts  bridgeEthToStarknet.ts  crossChainSwap.ts  testBridge.ts
backend/services/: polkadot_service.py  price_service.py
backend/tests/: test_main.py
evm/: .gitignore
evm/client/: package-lock.json  package.json  server.ts
evm/contracts/: foundry.toml
evm/htlc/: .gitignore
evm/limit-order-protocol/: hardhat.config.js
evm/orders/: eth_dot_order_1754149018968.json  eth_dot_order_1754149242901.json  eth_dot_order_1754149242901_swap_config.json  eth_dot_order_1754150283603.json  eth_dot_order_1754150283603_swap_config.json  eth_dot_order_1754150579890.json  eth_dot_order_1754150579890_swap_config.json  eth_dot_order_1754150674957.json  eth_dot_order_1754150674957_swap_config.json  eth_dot_order_1754150955331.json  eth_dot_order_1754150955331_swap_config.json  eth_dot_order_1754210075454.json  eth_dot_order_1754210075454_swap_config.json  eth_dot_order_1754211521017.json  eth_dot_order_1754211521017_swap_config.json  eth_dot_order_1754212266347.json  eth_dot_order_1754212266347_swap_config.json  eth_to_dot_order_1754211882652.json  eth_to_dot_order_1754211882652_swap_config.json
frontend/: eslint.config.js  package-lock.json  package.json  wrangler.jsonc
frontend/project.inlang/: project_id
frontend/src/: app.d.ts  worker-configuration.d.ts
substrate/: Cargo.toml  README.md
substrate/runtime/: Cargo.toml
swap/: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  flow.md  package-lock.json  package.json  setup.sh  strategy.md  test-price-endpoints.js  tsconfig.json
swap/bridges/: tsconfig.json
swap/contracts/token_receiver/: Cargo.toml  lib.rs
swap/src/: index.ts
(+78 files in other folders)
