[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "joao", email = "joao@.com"},
]
dependencies = ["fastapi>=0.116.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
[tool.pdm.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
