[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "joao", email = "joao@.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.29",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "substrate-interface>=1.7.9"
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0"
]

[tool.pdm]
distribution = false
