[package]
name = "token_receiver"
version = "0.1.0"
authors = ["FlipPay Team"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
name = "token_receiver"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
lto = true

[profile.dev]
overflow-checks = false 